--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "echarts": "^5.3.3",
+    "echarts-for-react": "^3.0.2",
     "react": "17",
     "react-dom": "17",
     "react-scripts": "5.0.1",
